cmake_minimum_required(VERSION 3.0)
project(nn C CXX)

include_directories( . /usr/local/include/eo )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_library(nn STATIC nn.cc)
add_executable(test-nn main.cc)
add_executable(example example.cc)
target_link_libraries(test-nn nn)
target_link_libraries(example nn ga es cma eoutils eo)
